--- a/code/PA3/k_mean.ipynb
+++ b/code/PA3/k_mean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -44,12 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def k_mean(data, k, repeat = 10):\n",
-    "    centroids = coordinates[np.random.randint(0, data.shape[0] - 1, k)]\n",
+    "    centroids = data[np.random.randint(0, data.shape[0] - 1, k)]\n",
     "    #centroids = sorted(centroids, key=lambda a: a[1])\n",
     "    clusters = []\n",
     "    SSEs = []\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,9 +108,9 @@
      "output_type": "stream",
      "text": [
       "Repeat: 0\n",
-      "sse: 48911.9967339 sse_change 48911.9967339\n",
-      "sse: 1841.24251939 sse_change 47070.7542145\n",
-      "sse: 0.257567978235 sse_change 1840.98495141\n",
+      "sse: 48912.0004621 sse_change 48912.0004621\n",
+      "sse: 1652.00550018 sse_change 47259.9949619\n",
+      "sse: 0.257567978235 sse_change 1651.7479322\n",
       "sse: 0.257567978235 sse_change 0.0\n",
       "Repeat: 1\n",
       "sse: 0.257567978235 sse_change 0.257567978235\n",
@@ -141,8 +143,655 @@
     }
    ],
    "source": [
-    "a=k_mean(coordinates, 3)"
+    "K = 3\n",
+    "clusters=k_mean(coordinates, K)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   2 \n",
+      "\n",
+      "1   2 \n",
+      "\n",
+      "2   2 \n",
+      "\n",
+      "3   2 \n",
+      "\n",
+      "4   0 \n",
+      "\n",
+      "5   0 \n",
+      "\n",
+      "6   1 \n",
+      "\n",
+      "7   2 \n",
+      "\n",
+      "8   2 \n",
+      "\n",
+      "9   1 \n",
+      "\n",
+      "10   2 \n",
+      "\n",
+      "11   1 \n",
+      "\n",
+      "12   0 \n",
+      "\n",
+      "13   2 \n",
+      "\n",
+      "14   1 \n",
+      "\n",
+      "15   1 \n",
+      "\n",
+      "16   1 \n",
+      "\n",
+      "17   2 \n",
+      "\n",
+      "18   1 \n",
+      "\n",
+      "19   0 \n",
+      "\n",
+      "20   0 \n",
+      "\n",
+      "21   0 \n",
+      "\n",
+      "22   0 \n",
+      "\n",
+      "23   1 \n",
+      "\n",
+      "24   2 \n",
+      "\n",
+      "25   0 \n",
+      "\n",
+      "26   2 \n",
+      "\n",
+      "27   0 \n",
+      "\n",
+      "28   2 \n",
+      "\n",
+      "29   2 \n",
+      "\n",
+      "30   0 \n",
+      "\n",
+      "31   1 \n",
+      "\n",
+      "32   2 \n",
+      "\n",
+      "33   2 \n",
+      "\n",
+      "34   2 \n",
+      "\n",
+      "35   1 \n",
+      "\n",
+      "36   0 \n",
+      "\n",
+      "37   2 \n",
+      "\n",
+      "38   0 \n",
+      "\n",
+      "39   1 \n",
+      "\n",
+      "40   1 \n",
+      "\n",
+      "41   1 \n",
+      "\n",
+      "42   1 \n",
+      "\n",
+      "43   1 \n",
+      "\n",
+      "44   1 \n",
+      "\n",
+      "45   0 \n",
+      "\n",
+      "46   2 \n",
+      "\n",
+      "47   1 \n",
+      "\n",
+      "48   2 \n",
+      "\n",
+      "49   2 \n",
+      "\n",
+      "50   0 \n",
+      "\n",
+      "51   1 \n",
+      "\n",
+      "52   2 \n",
+      "\n",
+      "53   1 \n",
+      "\n",
+      "54   0 \n",
+      "\n",
+      "55   1 \n",
+      "\n",
+      "56   2 \n",
+      "\n",
+      "57   1 \n",
+      "\n",
+      "58   0 \n",
+      "\n",
+      "59   1 \n",
+      "\n",
+      "60   2 \n",
+      "\n",
+      "61   0 \n",
+      "\n",
+      "62   1 \n",
+      "\n",
+      "63   2 \n",
+      "\n",
+      "64   0 \n",
+      "\n",
+      "65   1 \n",
+      "\n",
+      "66   1 \n",
+      "\n",
+      "67   2 \n",
+      "\n",
+      "68   0 \n",
+      "\n",
+      "69   1 \n",
+      "\n",
+      "70   0 \n",
+      "\n",
+      "71   2 \n",
+      "\n",
+      "72   1 \n",
+      "\n",
+      "73   0 \n",
+      "\n",
+      "74   2 \n",
+      "\n",
+      "75   2 \n",
+      "\n",
+      "76   2 \n",
+      "\n",
+      "77   1 \n",
+      "\n",
+      "78   0 \n",
+      "\n",
+      "79   2 \n",
+      "\n",
+      "80   2 \n",
+      "\n",
+      "81   1 \n",
+      "\n",
+      "82   2 \n",
+      "\n",
+      "83   0 \n",
+      "\n",
+      "84   2 \n",
+      "\n",
+      "85   2 \n",
+      "\n",
+      "86   0 \n",
+      "\n",
+      "87   2 \n",
+      "\n",
+      "88   0 \n",
+      "\n",
+      "89   2 \n",
+      "\n",
+      "90   0 \n",
+      "\n",
+      "91   0 \n",
+      "\n",
+      "92   2 \n",
+      "\n",
+      "93   0 \n",
+      "\n",
+      "94   0 \n",
+      "\n",
+      "95   0 \n",
+      "\n",
+      "96   1 \n",
+      "\n",
+      "97   1 \n",
+      "\n",
+      "98   2 \n",
+      "\n",
+      "99   2 \n",
+      "\n",
+      "100   2 \n",
+      "\n",
+      "101   0 \n",
+      "\n",
+      "102   2 \n",
+      "\n",
+      "103   2 \n",
+      "\n",
+      "104   1 \n",
+      "\n",
+      "105   1 \n",
+      "\n",
+      "106   2 \n",
+      "\n",
+      "107   0 \n",
+      "\n",
+      "108   2 \n",
+      "\n",
+      "109   2 \n",
+      "\n",
+      "110   0 \n",
+      "\n",
+      "111   1 \n",
+      "\n",
+      "112   2 \n",
+      "\n",
+      "113   0 \n",
+      "\n",
+      "114   2 \n",
+      "\n",
+      "115   2 \n",
+      "\n",
+      "116   0 \n",
+      "\n",
+      "117   2 \n",
+      "\n",
+      "118   0 \n",
+      "\n",
+      "119   0 \n",
+      "\n",
+      "120   1 \n",
+      "\n",
+      "121   1 \n",
+      "\n",
+      "122   2 \n",
+      "\n",
+      "123   0 \n",
+      "\n",
+      "124   1 \n",
+      "\n",
+      "125   0 \n",
+      "\n",
+      "126   1 \n",
+      "\n",
+      "127   0 \n",
+      "\n",
+      "128   1 \n",
+      "\n",
+      "129   0 \n",
+      "\n",
+      "130   1 \n",
+      "\n",
+      "131   0 \n",
+      "\n",
+      "132   1 \n",
+      "\n",
+      "133   2 \n",
+      "\n",
+      "134   2 \n",
+      "\n",
+      "135   0 \n",
+      "\n",
+      "136   0 \n",
+      "\n",
+      "137   2 \n",
+      "\n",
+      "138   2 \n",
+      "\n",
+      "139   0 \n",
+      "\n",
+      "140   1 \n",
+      "\n",
+      "141   1 \n",
+      "\n",
+      "142   2 \n",
+      "\n",
+      "143   0 \n",
+      "\n",
+      "144   1 \n",
+      "\n",
+      "145   1 \n",
+      "\n",
+      "146   1 \n",
+      "\n",
+      "147   2 \n",
+      "\n",
+      "148   1 \n",
+      "\n",
+      "149   1 \n",
+      "\n",
+      "150   0 \n",
+      "\n",
+      "151   1 \n",
+      "\n",
+      "152   1 \n",
+      "\n",
+      "153   0 \n",
+      "\n",
+      "154   0 \n",
+      "\n",
+      "155   0 \n",
+      "\n",
+      "156   0 \n",
+      "\n",
+      "157   0 \n",
+      "\n",
+      "158   1 \n",
+      "\n",
+      "159   1 \n",
+      "\n",
+      "160   0 \n",
+      "\n",
+      "161   2 \n",
+      "\n",
+      "162   0 \n",
+      "\n",
+      "163   2 \n",
+      "\n",
+      "164   1 \n",
+      "\n",
+      "165   0 \n",
+      "\n",
+      "166   0 \n",
+      "\n",
+      "167   0 \n",
+      "\n",
+      "168   0 \n",
+      "\n",
+      "169   0 \n",
+      "\n",
+      "170   0 \n",
+      "\n",
+      "171   2 \n",
+      "\n",
+      "172   2 \n",
+      "\n",
+      "173   1 \n",
+      "\n",
+      "174   1 \n",
+      "\n",
+      "175   2 \n",
+      "\n",
+      "176   0 \n",
+      "\n",
+      "177   1 \n",
+      "\n",
+      "178   1 \n",
+      "\n",
+      "179   0 \n",
+      "\n",
+      "180   2 \n",
+      "\n",
+      "181   0 \n",
+      "\n",
+      "182   1 \n",
+      "\n",
+      "183   1 \n",
+      "\n",
+      "184   0 \n",
+      "\n",
+      "185   1 \n",
+      "\n",
+      "186   1 \n",
+      "\n",
+      "187   0 \n",
+      "\n",
+      "188   2 \n",
+      "\n",
+      "189   0 \n",
+      "\n",
+      "190   1 \n",
+      "\n",
+      "191   1 \n",
+      "\n",
+      "192   2 \n",
+      "\n",
+      "193   2 \n",
+      "\n",
+      "194   2 \n",
+      "\n",
+      "195   1 \n",
+      "\n",
+      "196   2 \n",
+      "\n",
+      "197   2 \n",
+      "\n",
+      "198   1 \n",
+      "\n",
+      "199   2 \n",
+      "\n",
+      "200   0 \n",
+      "\n",
+      "201   2 \n",
+      "\n",
+      "202   1 \n",
+      "\n",
+      "203   2 \n",
+      "\n",
+      "204   0 \n",
+      "\n",
+      "205   1 \n",
+      "\n",
+      "206   2 \n",
+      "\n",
+      "207   0 \n",
+      "\n",
+      "208   1 \n",
+      "\n",
+      "209   1 \n",
+      "\n",
+      "210   0 \n",
+      "\n",
+      "211   1 \n",
+      "\n",
+      "212   1 \n",
+      "\n",
+      "213   2 \n",
+      "\n",
+      "214   0 \n",
+      "\n",
+      "215   0 \n",
+      "\n",
+      "216   2 \n",
+      "\n",
+      "217   0 \n",
+      "\n",
+      "218   2 \n",
+      "\n",
+      "219   0 \n",
+      "\n",
+      "220   2 \n",
+      "\n",
+      "221   0 \n",
+      "\n",
+      "222   0 \n",
+      "\n",
+      "223   0 \n",
+      "\n",
+      "224   1 \n",
+      "\n",
+      "225   1 \n",
+      "\n",
+      "226   1 \n",
+      "\n",
+      "227   2 \n",
+      "\n",
+      "228   1 \n",
+      "\n",
+      "229   2 \n",
+      "\n",
+      "230   2 \n",
+      "\n",
+      "231   1 \n",
+      "\n",
+      "232   1 \n",
+      "\n",
+      "233   0 \n",
+      "\n",
+      "234   0 \n",
+      "\n",
+      "235   1 \n",
+      "\n",
+      "236   2 \n",
+      "\n",
+      "237   1 \n",
+      "\n",
+      "238   2 \n",
+      "\n",
+      "239   1 \n",
+      "\n",
+      "240   2 \n",
+      "\n",
+      "241   2 \n",
+      "\n",
+      "242   1 \n",
+      "\n",
+      "243   1 \n",
+      "\n",
+      "244   1 \n",
+      "\n",
+      "245   1 \n",
+      "\n",
+      "246   1 \n",
+      "\n",
+      "247   1 \n",
+      "\n",
+      "248   1 \n",
+      "\n",
+      "249   2 \n",
+      "\n",
+      "250   1 \n",
+      "\n",
+      "251   1 \n",
+      "\n",
+      "252   0 \n",
+      "\n",
+      "253   0 \n",
+      "\n",
+      "254   0 \n",
+      "\n",
+      "255   0 \n",
+      "\n",
+      "256   1 \n",
+      "\n",
+      "257   2 \n",
+      "\n",
+      "258   1 \n",
+      "\n",
+      "259   2 \n",
+      "\n",
+      "260   0 \n",
+      "\n",
+      "261   2 \n",
+      "\n",
+      "262   1 \n",
+      "\n",
+      "263   0 \n",
+      "\n",
+      "264   0 \n",
+      "\n",
+      "265   2 \n",
+      "\n",
+      "266   0 \n",
+      "\n",
+      "267   2 \n",
+      "\n",
+      "268   0 \n",
+      "\n",
+      "269   2 \n",
+      "\n",
+      "270   0 \n",
+      "\n",
+      "271   1 \n",
+      "\n",
+      "272   2 \n",
+      "\n",
+      "273   1 \n",
+      "\n",
+      "274   0 \n",
+      "\n",
+      "275   0 \n",
+      "\n",
+      "276   2 \n",
+      "\n",
+      "277   2 \n",
+      "\n",
+      "278   0 \n",
+      "\n",
+      "279   0 \n",
+      "\n",
+      "280   1 \n",
+      "\n",
+      "281   1 \n",
+      "\n",
+      "282   1 \n",
+      "\n",
+      "283   1 \n",
+      "\n",
+      "284   0 \n",
+      "\n",
+      "285   0 \n",
+      "\n",
+      "286   1 \n",
+      "\n",
+      "287   0 \n",
+      "\n",
+      "288   0 \n",
+      "\n",
+      "289   2 \n",
+      "\n",
+      "290   0 \n",
+      "\n",
+      "291   2 \n",
+      "\n",
+      "292   1 \n",
+      "\n",
+      "293   2 \n",
+      "\n",
+      "294   0 \n",
+      "\n",
+      "295   2 \n",
+      "\n",
+      "296   2 \n",
+      "\n",
+      "297   2 \n",
+      "\n",
+      "298   0 \n",
+      "\n",
+      "299   2 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, coordinates.shape[0]):\n",
+    "    for j in range(0, K):\n",
+    "        if i in clusters[j]:\n",
+    "            print(i, \" \", j, \"\\n\")\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"%d %d\"%(K, 12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -161,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
