--- a/code/PA6/tree.ipynb
+++ b/code/PA6/tree.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "(3000, 128)"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,62 +90,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=np.zeros((train_feature.shape[0], train_feature.shape[1] + 1))\n",
+    "b[:,0] = [i for i in range(0, train_feature.shape[0])]\n",
+    "b[:,1:] = train_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0:2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0:2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   0    1\n",
-       "1  4  0:2\n",
-       "2  2  0:2"
+       "array([  0.00000000e+00,   1.00000000e+00,   2.00000000e+00, ...,\n",
+       "         2.99700000e+03,   2.99800000e+03,   2.99900000e+03])"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.iloc[[1,2],[0,1]]"
+    "b[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(591, 128)"
+      ]
+     },
+     "execution_count": 367,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_feature[train_feature[:,0]==3].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=np.hstack(([[i] for i in range(0, train_feature.shape[0])], train_feature))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 2, 2, ..., 2, 2, 2],\n",
+       "       [2, 3, 2, ..., 3, 3, 1],\n",
+       "       [2, 2, 2, ..., 2, 2, 2],\n",
+       "       ..., \n",
+       "       [2, 2, 2, ..., 1, 2, 1],\n",
+       "       [2, 3, 2, ..., 3, 2, 2],\n",
+       "       [1, 2, 2, ..., 2, 2, 1]], dtype=object)"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.delete(a, [0], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 349,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1,2]+[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a=object()\n",
+    "b=object()\n",
+    "c=object()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<object at 0x10c2c57d0>]"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[]+[c]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,\n",
+       "        13,  14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,\n",
+       "        26,  27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,\n",
+       "        39,  40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,\n",
+       "        52,  53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,\n",
+       "        65,  66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,\n",
+       "        78,  79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,\n",
+       "        91,  92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102, 103,\n",
+       "       104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116,\n",
+       "       117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127])"
+      ]
+     },
+     "execution_count": 358,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.delete([i for i in range(0, 128)], [])"
    ]
   },
   {
