--- a/code/PA6/tree.ipynb
+++ b/code/PA6/tree.ipynb
@@ -192,111 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3, 2, 2, ..., 2, 2, 2],\n",
-       "       [2, 3, 2, ..., 3, 3, 1],\n",
-       "       [2, 2, 2, ..., 2, 2, 2],\n",
-       "       ..., \n",
-       "       [2, 2, 2, ..., 1, 2, 1],\n",
-       "       [2, 3, 2, ..., 3, 2, 2],\n",
-       "       [1, 2, 2, ..., 2, 2, 1]], dtype=object)"
+       "{1: [], 2: []}"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.delete(a, [0], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 373,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 373,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a={1:11,2:22,3:33}\n",
-    "3 in a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 351,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "a=object()\n",
-    "b=object()\n",
-    "c=object()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 368,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<object at 0x10c2c57d0>]"
-      ]
-     },
-     "execution_count": 368,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[]+[c]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 358,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,\n",
-       "        13,  14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,\n",
-       "        26,  27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,\n",
-       "        39,  40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,\n",
-       "        52,  53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,\n",
-       "        65,  66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,\n",
-       "        78,  79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,\n",
-       "        91,  92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102, 103,\n",
-       "       104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116,\n",
-       "       117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127])"
-      ]
-     },
-     "execution_count": 358,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.delete([i for i in range(0, 128)], [])"
+    "{i:[] for i in [1,2]} "
    ]
   },
   {
