--- a/code/PA6/tree.ipynb
+++ b/code/PA6/tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 391,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 392,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "2.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 394,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 395,
    "metadata": {
     "collapsed": true
    },
@@ -100,21 +100,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 3, 2, 1, 2, 3, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 1, 1, 1, 2,\n",
-       "       2, 1, 3, 1, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 1, 1, 2,\n",
-       "       2, 2, 2, 1, 3, 2, 3, 3, 1, 2, 2, 3, 1, 3, 2, 2, 3, 1, 2, 2, 2, 1, 2,\n",
-       "       3, 2, 3, 2, 2, 2, 2, 2, 1, 1, 2, 2, 1, 2, 1, 1, 1, 3, 2, 2, 3, 1, 3,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 1, 1, 2, 2, 2, 2, 1, 3,\n",
-       "       2, 3, 2, 1, 1, 2, 3, 1, 3, 2, 3, 3, 1], dtype=object)"
+       "array([3, 0, 9, 7, 2, 1, 8, 5, 4, 6])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 403,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(10, 10, replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  2.,  2.,  3.,  2.,  2.,  1.,  2.,  2.,  2.,  1.,  2.,  2.,\n",
+       "         2.,  2.,  3.,  2.,  3.,  2.,  1.,  2.,  1.,  1.,  2.,  1.,  3.,\n",
+       "         2.,  2.,  2.,  2.,  2.,  2.,  1.,  2.,  2.,  2.,  1.,  2.,  2.,\n",
+       "         3.,  2.,  2.,  3.,  3.,  2.,  3.,  2.,  2.,  3.,  3.,  3.,  3.,\n",
+       "         2.,  1.,  1.,  2.,  2.,  1.,  2.,  2.,  2.,  2.,  2.,  1.,  1.,\n",
+       "         2.,  2.,  3.,  2.,  2.,  1.,  2.,  2.,  2.,  1.,  2.,  2.,  2.,\n",
+       "         2.,  3.,  2.,  2.,  2.,  1.,  2.,  1.,  2.,  2.,  1.,  3.,  2.,\n",
+       "         2.,  2.,  2.,  2.,  2.,  1.,  2.,  2.,  2.,  2.,  2.,  2.,  3.,\n",
+       "         2.,  2.,  3.,  3.,  3.,  3.,  2.,  2.,  3.,  3.,  3.,  3.,  2.,\n",
+       "         1.,  1.,  2.,  2.,  1.,  2.,  2.,  2.,  2.,  2.,  1.],\n",
+       "       [ 2.,  3.,  2.,  2.,  2.,  3.,  1.,  1.,  3.,  2.,  3.,  2.,  2.,\n",
+       "         2.,  2.,  2.,  1.,  2.,  1.,  1.,  2.,  1.,  2.,  2.,  1.,  3.,\n",
+       "         3.,  1.,  2.,  3.,  2.,  3.,  2.,  1.,  2.,  2.,  1.,  3.,  2.,\n",
+       "         2.,  1.,  2.,  2.,  3.,  2.,  3.,  2.,  2.,  2.,  3.,  3.,  2.,\n",
+       "         1.,  3.,  1.,  2.,  1.,  2.,  2.,  3.,  2.,  3.,  2.,  1.,  2.,\n",
+       "         2.,  2.,  2.,  2.,  3.,  1.,  1.,  3.,  2.,  2.,  2.,  2.,  2.,\n",
+       "         2.,  2.,  1.,  2.,  2.,  1.,  2.,  2.,  2.,  2.,  1.,  3.,  3.,\n",
+       "         1.,  1.,  3.,  2.,  3.,  2.,  2.,  2.,  2.,  1.,  3.,  2.,  2.,\n",
+       "         1.,  2.,  2.,  3.,  2.,  3.,  3.,  2.,  2.,  3.,  3.,  2.,  2.,\n",
+       "         2.,  1.,  2.,  2.,  2.,  2.,  3.,  2.,  3.,  2.,  2.]])"
+      ]
+     },
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +156,17 @@
    "source": [
     "#np.bincount([1,2,3,1])\n",
     "\n",
-    "train_feature[1]"
+    "train_feature[[1,2]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
